# cmake-cpp-template

./: .gitmodules  CMakeLists.txt  README.md
app/: main.cpp
archive/: LICENSE  README.md
cmake/: ExecutableAndBuildingLibrary.cmake  Fetch.cmake  Option.cmake  SourcesAndHeaders.cmake  Utilities.cmake
include/: tmp.hpp
src/: tmp.cpp
test/: CMakeLists.txt
